# Vertex-Label-Distance-Oracles

./: CMakeLists.txt  Makefile  README.md  main.cpp
oracles/: CMakeLists.txt  Makefile  chechik_oracle.cpp  chechik_oracle.hpp  oracle.cpp  oracle.hpp  restricted_chechik_oracle.cpp  restricted_chechik_oracle.hpp  spanner.cpp  spanner.hpp  thorup_zwick_oracle.cpp  thorup_zwick_oracle.hpp  with_chechik_oracle.cpp  with_chechik_oracle.hpp  with_dijkstra_oracle.cpp  with_dijkstra_oracle.hpp  with_thorup_zwick_oracle.cpp  with_thorup_zwick_oracle.hpp
oracles/lib/: CMakeLists.txt  Makefile  heap.hpp  heap.test.cpp  parser.cpp  parser.hpp  parser.test.cpp  sssp.cpp  sssp.hpp  std_methods.cpp  std_methods.hpp  structs.cpp  structs.hpp  tst_methods.cpp  tst_methods.hpp
tests/: space_measurement.hpp  stretch_thorup_zwick.cpp  stretch_vertex_label_oras.cpp  tests.cpp
